--- a/app/views/layouts/_usernavigation.html.erb
+++ b/app/views/layouts/_usernavigation.html.erb
@@ -21,9 +21,10 @@
                       </ul>
                     </li>
                 </ul>
+                <a href ="/"><img src="/assets/preparedly-nav-blue.png" width="180px" height="31px"></a>   
             </div>
         </div>
       </div>
     </div>
-  
+
 
