Get asynchonous task handler to take date from params

--- a/app/views/task_mailer/reminder_email.html.erb
+++ b/app/views/task_mailer/reminder_email.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- might need to content_type "multipart/mixed" since delayed job is handling it -->
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
