--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,12 +11,14 @@
     <div class="task-butt">
         <% if user_signed_in? %>
             <%= link_to '<i class="icon-time icon-white"></i> Skip this for now'.html_safe, tasks_path, :class => 'btn-large btn-inverse btn' %> 
-
             <%= link_to '<i class="icon-ok icon-white"></i> I did it!'.html_safe, completed_task_path(@random.id), :class => 'btn-large btn-success btn' -%>
+            <%= datepicker_input "task","birthday" %>
 
+             <%= form_tag(reminder_path(@random.id), :action => :post) do%>  
+             <%= select_tag(:date, options_for_select([['Tomorrow', 5.seconds.from_now], ['In a week', 7.days.from_now]])) %>
+             <%= submit_tag "Remind me later"  %>   
+             <% end %>
 
-
-             <%= link_to '<i class="icon-ok icon-white"></i> Remind me later'.html_safe, reminder_path(@random.id), :class => 'btn-large btn-success btn' -%>
             
             <%= link_to '<i class="icon-pencil icon-white"></i> Create a new task'.html_safe, new_task_path, :class => 'btn-large btn-info btn' %>
         <% else %>
