--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -592,8 +592,17 @@ a.tooltip:hover span{
     position: absolute;
     width: 100px;
     z-index: 5;
-
 }
+
+
+
+/* -------------------- css for timepicker - NOTE: this is in addition to the jqueryui css file called in the tasks/index view */
+.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
+.ui-timepicker-div dl { text-align: left; }
+.ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
+.ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
+.ui-timepicker-div td { font-size: 90%; }
+.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
 
 
 /*------------------------------------------------footer stuff---*/
