--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,38 +2,37 @@
 <html>
 <head>
   <title>Preparedly</title>
-    <meta name="viewport" content="width=device-width,initial-scale =1, user-scalable = no" />
-  <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <meta name="viewport" content="width=device-width,initial-scale =1, user-scalable = no" />
   <%= yield :stylesheet_yield %>
   <%= yield :fb_og_tags %>
-  <%= stylesheet_link_tag "mobile", :media => "all and (max-width: 600px)" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+  
+  <%= stylesheet_link_tag "bootstrap", :media => "all" %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= stylesheet_link_tag "mobile", :media => "all and (max-width: 800px)" %>
+  <%= stylesheet_link_tag "bootstrap-responsive", :media => "all" %>
 </head>
-<body data-spy="scroll" data-target=".subnav" data-offset="100">
-<div class="container">
-  <div id="main-wrap">
-      <% if user_signed_in? %>
-           <%= render "layouts/usernavigation" %>
-         <% else %>
-           <%= render "layouts/navigation" %>
-      <% end %>
+<body>
+  <% if user_signed_in? %>
+             <%= render "layouts/usernavigation" %>
+           <% else %>
+             <%= render "layouts/navigation" %>
+        <% end %>
+<div class="container" id="main-wrap">      
       <div id="beta">
       </div>   
-      <% unless user_signed_in? %>
-        <div id="logo-wrapper">
-          <a href="/">
-            <div id="logo" title="preparedly">
-            </div>
-          </a>
-        </div>
-      <% end %>   
       <div id="main">
+        <% unless user_signed_in? %>
+          <div id="logo-wrapper">
+            <a href="/">
+              <div id="logo" title="preparedly">
+              </div>
+            </a>
+          </div>
+      <% end %>   
           <%= yield %>
       </div>
-  </div>
 </div>
+
 <div id="footer">
 	<div id="footer-green">
 		<div id="footer-main">
@@ -64,20 +63,16 @@
 
 	<div id="footer-bottom">
 	</div>
-
-
-</div>
-<!-- Typekit -->
+<!-- Typekit 
 <script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-<%= yield :javascript_yield %>
+-->
+<!-- <%= yield :javascript_yield %> -->
 <%= javascript_include_tag "application" %>
 
-</body>
    
 <script type="text/javascript" charset="utf-8">
 $('.dropdown-toggle').dropdown();
-$('#navbar').scrollspy();
 $(document).scroll(function(){
     // If has not activated (has no attribute "data-top"
     if (!$('.subnav').attr('data-top')) {
@@ -96,42 +91,56 @@ $(document).scroll(function(){
 </script>
 <!-- Google Analytics -->
     <script type="text/javascript">
+    // fix sub nav on scroll
+    var $win = $(window)
+      , $nav = $('.subnav')
+      , navTop = $('.subnav').length && $('.subnav').offset().top - 40
+      , isFixed = 0
 
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-30366897-1']);
-      _gaq.push(['_trackPageview']);
+    processScroll()
 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+    // hack sad times - holdover until rewrite for 2.1
+    $nav.on('click', function () {
+      if (!isFixed) setTimeout(function () {  $win.scrollTop($win.scrollTop() - 47) }, 10)
+    })
+
+    $win.on('scroll', processScroll)
+
+    function processScroll() {
+      var i, scrollTop = $win.scrollTop()
+      if (scrollTop >= navTop && !isFixed) {
+        isFixed = 1
+        $nav.addClass('subnav-fixed')
+      } else if (scrollTop <= navTop && isFixed) {
+        isFixed = 0
+        $nav.removeClass('subnav-fixed')
+      }
+    }
 
     </script>
 <script type="text/javascript" charset="utf-8">
-  var is_ssl = ("https:" == document.location.protocol);
-  var asset_host = is_ssl ? "https://d3rdqalhjaisuu.cloudfront.net/" : "http://d3rdqalhjaisuu.cloudfront.net/";
-  document.write(unescape("%3Cscript src='" + asset_host + "javascripts/feedback-v2.js' type='text/javascript'%3E%3C/script%3E"));
+//   var is_ssl = ("https:" == document.location.protocol);
+//   var asset_host = is_ssl ? "https://d3rdqalhjaisuu.cloudfront.net/" : "http://d3rdqalhjaisuu.cloudfront.net/";
+//   document.write(unescape("%3Cscript src='" + asset_host + "javascripts/feedback-v2.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 
 <script type="text/javascript" charset="utf-8">
-  var feedback_widget_options = {};
+//   var feedback_widget_options = {};
 
-  feedback_widget_options.display = "overlay";  
-  feedback_widget_options.company = "code_for_america";
-  feedback_widget_options.placement = "right";
-  feedback_widget_options.color = "#333333";
-  feedback_widget_options.style = "question";
-  feedback_widget_options.product = "code_for_america_preparedly";
-  feedback_widget_options.tag = "feedback";
+//   feedback_widget_options.display = "overlay";  
+//   feedback_widget_options.company = "code_for_america";
+//   feedback_widget_options.placement = "right";
+//   feedback_widget_options.color = "#333333";
+//   feedback_widget_options.style = "question";
+//   feedback_widget_options.product = "code_for_america_preparedly";
+//   feedback_widget_options.tag = "feedback";
   
-  feedback_widget_options.custom_css = "feedback.css";
+//   feedback_widget_options.custom_css = "feedback.css";
   
-  feedback_widget_options.limit = "3";
+//   feedback_widget_options.limit = "3";
   
 
-  var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
+//   var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
 </script>
-
-
+</body>
 </html>
