--- a/app/views/layouts/_usernavigation.html.erb
+++ b/app/views/layouts/_usernavigation.html.erb
@@ -1,30 +1,26 @@
 <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button"class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <!-- Navgation -->
-            <div class="nav-collapse collapse">
-                <!--Upper NAVIGATION!-->
-                <ul class="nav navbar-items">
-                	<li class=""><a href="/"> home</a></li>
-        					<li><%= link_to "learn", resources_path %></li> 
-        					<li><%= link_to "about", about_path %></li>
-        					<li class="dropdown">
-                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">account <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-      						<li><%= render 'devise/menu/registration_items' %></li>
-      						<li><%= render 'devise/menu/login_items' %></li>
-                      </ul>
-                    </li>
+  <div class="navbar-inner">
+    <div class="container-fluid">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+  <a class="brand" href="#"><img src="/assets/preparedly-nav-blue.png" width="180px" height="31px"></a>
+      <div class="nav-collapse">
+          <ul class="nav navbar-items pull-right">
+            <li class=""><a href="/"> home</a></li>
+            <li><%= link_to "learn", resources_path %></li> 
+            <li><%= link_to "about", about_path %></li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">account <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+            <li><%= render 'devise/menu/registration_items' %></li>
+            <li><%= render 'devise/menu/login_items' %></li>
                 </ul>
-                <a href ="/"><img src="/assets/preparedly-nav-blue.png" width="180px" height="31px"></a>   
-            </div>
-        </div>
-      </div>
+              </li>
+          </ul>
+      </div><!--/.nav-collapse -->
     </div>
-
-
+  </div>
+</div>
