--- a/app/views/map/_post.html.erb
+++ b/app/views/map/_post.html.erb
@@ -1,4 +1,3 @@
-<p>hello</p>
 <div class="controls">
             <div class="input-append">
                 <%= text_field_tag(:q, nil,  :value => '123 Main St. Austin, TX', :class => 'form-inline input-xx-large') %><%= submit_tag("Go", :class => 'btn btn-info btn') %>
@@ -71,7 +70,7 @@
                     </tr>        
                 </table>
             </div>
-            <% unless user_signed_in? %>
+           <!-- <% unless user_signed_in? %>
                 <div class="detail-col">
                   <h4>
                       Join prepared.ly &mdash; it's free!
@@ -84,18 +83,16 @@
                       Want to start getting more prepared <em>right now</em>?
                   </h4>
                     <a href="/tasks"><button class="btn btn-success btn-large"> <i class="icon-fire icon-white"></i> Get started! </button></a>
-            </div>   
+            </div>   -->
       </div>
     </div>  
-<!--
-  </div>-->
   <% else %>
   <div>Please enter a valid street address and try again.</div>
   <% end %>
 </div>
 <% content_for :javascript_yield do %>
   <!-- scripts -->
-  <script type="text/javascript">
+<!--  <script type="text/javascript">
   $(document).ready(function() {
     $("#map-pop")
      .popover({/*trigger: 'manual'*/})
@@ -104,7 +101,7 @@
        //$('#map-pop').popover('show');
     });
    });
-  </script>
+  </script>-->
   <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
 <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="app/assets/javascripts/wax.leaflet.min.js"></script>
