--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -1,14 +1,7 @@
 <% content_for :stylesheet_yield do %>
   <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.css">
   <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.ie.css">
-
 <% end %>
-
-<!--<div id="map-main">-->
-<!--  <div id="map-content-top">
-
-  </div>
--->
   <% if @coordinates %>
   <div>
     <div class="controls">
@@ -40,7 +33,8 @@
                     </tr>
                     <tr>
                         <td class="note">
-                            <a href="#" id="map-pop" data-content="<strong> About Risk Level </strong><br>The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
+                            <a href="#" id="map-pop" rel="popover" data-content="<strong> About Risk Level </strong>
+                              <br>The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
                             Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
                             The FIS quantifies potential fire intensity based on high to extreme weather 
                             conditions, fuels, and topography." class="note">About Risk Level</a>
@@ -71,7 +65,7 @@
                         <td><span class="condition-type">Inside of a Burn Ban: </span><span class="class="condition"> <%= @inside_burnban %></span></td>
                     </tr>
                     <tr id="map-controls">
-                        <td><label for="firestations" class="condition-type">Show Fire Stations</label>&nbsp<input type="checkbox" id="firestations" name="firestations" checked="checked" /></td>
+                        <td><label for="firestations" class="condition-type">Show Fire Stations</label &nbsp;<input type="checkbox" id="firestations" name="firestations" checked="checked" /></td>
                         </tr>
                         <tr>
                         <td class="note">
@@ -80,7 +74,7 @@
                     </tr>       
                 </table>
             </div>
-            <% unless user_signed_in? %>
+           <!-- <% unless user_signed_in? %>
                 <div class="detail-col">
                   <h4>
                       Join prepared.ly &mdash; it's free!
@@ -93,27 +87,25 @@
                       Want to start getting more prepared <em>right now</em>?
                   </h4>
                     <a href="/tasks"><button class="btn btn-success btn-large"> <i class="icon-fire icon-white"></i> Get started! </button></a>
-            </div>   
+            </div>   -->
 
 
 
       </div>
     </div>  
-<!--
-  </div>-->
   <% else %>
   <div>Please enter a valid street address and try again.</div>
   <% end %>
 </div>
 <% content_for :javascript_yield do %>
   <!-- scripts -->
-  <script type="text/javascript">
+ <script type="text/javascript">
   $(document).ready(function() {
     $("#map-pop")
      .popover({/*trigger: 'manual'*/})
      .click(function(e){
        e.preventDefault();
-       //$('#map-pop').popover('show');
+       $('#map-pop').popover('show');
     });
    });
   $(document).ready(function() {
@@ -121,14 +113,14 @@
      .popover({/*trigger: 'manual'*/})
      .click(function(e){
        e.preventDefault();
-       //$('#stations-pop').popover('show');
+       ('#stations-pop').popover('show');
     });
    });
   </script>
   <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
-<!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="app/assets/javascripts/wax.leaflet.min.js"></script>
-  <script type="text/javascript" src="app/assets/javascripts/cartodb-leaflet.js"></script>-->
+  <script type="text/javascript" src="app/assets/javascripts/cartodb-leaflet.js"></script>
 
   <% if @coordinates %>
     <script type="text/javascript">
