--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -1,7 +1,10 @@
 <p id="notice"><%= notice %></p>
-<div class="container task-container">
+<div class="task-container">
     <ul id="myTab" class="nav nav-tabs">
-        <li class="active note"><a href="#home" data-toggle="tab">YOUR TASK, SHOULD YOU CHOOSE TO ACCEPT:</a></li>
+        <li class="active note">
+            <a href="#home" data-toggle="tab">
+            YOUR TASK, SHOULD YOU CHOOSE TO ACCEPT:</a>
+        </li>
     </ul>
 
     <div class="main-col taskbox">
