--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -6,4 +6,8 @@
   <li>
   <%= link_to('login', new_user_session_path)  %>  
   </li>
+  <li>          
+  	<a data-toggle="modal" href="#signin" >Sign in Modal</a>
+  </li>
 <% end %>
+
