learn page secondary navigation, task reload in frame button

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,6 +57,10 @@ h1 {
 	font-style: normal;
 	font-weight: 700;
 }
+h1.center, p.center {
+	text-align:center;
+}
+
 h2 {
 	font-size: 20px;
 	font-style: normal;
@@ -1015,7 +1019,7 @@ legend + .control-group {
 
 section {
 	padding-top:110px;
-	min-height:300px;
+	min-height:150px;
 }
 
 section img{
