--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,6 @@
 <p id="notice"><%= notice %></p>
-<%= render "tasks/tasks" %>
+<div id="retask">
+	<%= render "tasks/tasks" %>
+</div>
 
-
+<a href="#retask" id ="skip">reload me </a>  
