--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,6 +87,19 @@
              <div class="modal-footer">
               <a href="#" class="btn" data-dismiss="modal" >Close</a>
             </div> 
+
+<!-- task window -->
+<script type="text/javascript" charset="utf-8">
+$(document).ready(function() {
+$("#skip").click(function(){   
+$.get("<%= url_for "tasks/tasks" %>",
+      function(response) {
+        $("#retask").html(response);
+      });
+    });
+});
+</script>
+
 <!-- Typekit -->
 <script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -94,9 +107,14 @@
 <%= yield :javascript_yield %> 
 <%= javascript_include_tag "application" %>
 
-   
 <script type="text/javascript" charset="utf-8">
-$('.dropdown-toggle').dropdown();
+  var is_ssl = ("https:" == document.location.protocol);
+  var asset_host = is_ssl ? "https://d3rdqalhjaisuu.cloudfront.net/" : "http://d3rdqalhjaisuu.cloudfront.net/";
+  document.write(unescape("%3Cscript src='" + asset_host + "javascripts/feedback-v2.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+
+<!-- subnav -->
+<script type="text/javascript" charset="utf-8">
 $(document).scroll(function(){
     // If has not activated (has no attribute "data-top"
     if (!$('.subnav').attr('data-top')) {
@@ -113,58 +131,25 @@ $(document).scroll(function(){
         $('.subnav').removeClass('subnav-fixed');
 });
 </script>
-<!-- Google Analytics -->
-    <script type="text/javascript">
-    // fix sub nav on scroll
-    // var $win = $(window)
-    //   , $nav = $('.subnav')
-    //   , navTop = $('.subnav').length && $('.subnav').offset().top - 40
-    //   , isFixed = 0
 
-    // processScroll()
-
-    // // hack sad times - holdover until rewrite for 2.1
-    // $nav.on('click', function () {
-    //   if (!isFixed) setTimeout(function () {  $win.scrollTop($win.scrollTop() - 47) }, 10)
-    // })
-
-    // $win.on('scroll', processScroll)
-
-    // function processScroll() {
-    //   var i, scrollTop = $win.scrollTop()
-    //   if (scrollTop >= navTop && !isFixed) {
-    //     isFixed = 1
-    //     $nav.addClass('subnav-fixed')
-    //   } else if (scrollTop <= navTop && isFixed) {
-    //     isFixed = 0
-    //     $nav.removeClass('subnav-fixed')
-    //   }
-    // }
-
-    </script>
+<!-- feedback widget -->
 <script type="text/javascript" charset="utf-8">
-  // var is_ssl = ("https:" == document.location.protocol);
-  // var asset_host = is_ssl ? "https://d3rdqalhjaisuu.cloudfront.net/" : "http://d3rdqalhjaisuu.cloudfront.net/";
-  // document.write(unescape("%3Cscript src='" + asset_host + "javascripts/feedback-v2.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
+  var feedback_widget_options = {};
 
-<script type="text/javascript" charset="utf-8">
-  // var feedback_widget_options = {};
-
-  // feedback_widget_options.display = "overlay";  
-  // feedback_widget_options.company = "code_for_america";
-  // feedback_widget_options.placement = "right";
-  // feedback_widget_options.color = "#333333";
-  // feedback_widget_options.style = "question";
-  // feedback_widget_options.product = "code_for_america_preparedly";
-  // feedback_widget_options.tag = "feedback";
+  feedback_widget_options.display = "overlay";  
+  feedback_widget_options.company = "code_for_america";
+  feedback_widget_options.placement = "right";
+  feedback_widget_options.color = "#333333";
+  feedback_widget_options.style = "question";
+  feedback_widget_options.product = "code_for_america_preparedly";
+  feedback_widget_options.tag = "feedback";
   
-  // feedback_widget_options.custom_css = "feedback.css";
+  feedback_widget_options.custom_css = "feedback.css";
   
-  // feedback_widget_options.limit = "3";
+  feedback_widget_options.limit = "3";
   
 
-  // var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
+  var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
 </script>
 </body>
 </html>
